style: hide some dmg effectiveness col on smaller device and fix table overflow

--- a/src/public/css/components/hunting-quest-component.css
+++ b/src/public/css/components/hunting-quest-component.css
@@ -150,7 +150,7 @@ caption {
 
 .player-slots-section {
   .player-slot {
-    flex: 1 0 30ch;
+    flex: 1 0 min(30ch, 70vw);
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -259,6 +259,10 @@ caption {
   .ui-tabs {
     font-size: 0.9em;
   }
+  .ui-tabs .ui-tabs-panel {
+    max-width: 90vw;
+    padding: 5px !important;
+  }
   .themetable,
   fieldset {
     border: none;
@@ -266,5 +270,14 @@ caption {
   .row-flex-wrap {
     display: flex;
     flex-wrap: wrap;
+  }
+  .freedom-unite-quest {
+    .themetable {
+      padding: 3px;
+    }
+    .dmg-effectiveness-table {
+      overflow-x: auto; /* Enable horizontal scrolling */
+      -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+    }
   }
 }
